# rrd_slam

./: README  contributors.txt  stack.xml
lsd_slam_core/: CMakeLists.txt  INSTALL_MacOSX.txt  INSTALL_Ubuntu.txt  manifest.xml
lsd_slam_core/cfg/: LSDDebugParams.cfgc  LSDParams.cfgc
lsd_slam_core/src/: LiveSLAMWrapper.h  NOTE.txt  SlamSystem.cpp  SlamSystem.h  SlamSystemForRollingShutter.cpp  SlamSystemForRollingShutter.h  main_on_images.cpp  main_on_images_gt.cpp  main_on_images_rollingshutter_BN3.cpp  main_undistort_image.cpp
lsd_slam_core/src/DataStructures/: Frame.cpp  Frame.h  FramePoseStruct.cpp  FramePoseStruct.h
lsd_slam_core/src/DepthEstimation/: DepthMap.cpp  DepthMap.h  DepthMapForRadialRolling.cpp  DepthMapForRadialRolling.h  DepthMapForRollingShutter.cpp  DepthMapForRollingShutter.h  DepthMapPixelHypothesis.cpp
lsd_slam_core/src/GlobalMapping/: TrackableKeyFrameSearch.cpp
lsd_slam_core/src/IOWrapper/: InputImageStream.h  Timestamp.cpp  Timestamp.h
lsd_slam_core/src/IOWrapper/OpenCV/: ImageDisplay_OpenCV.cpp
lsd_slam_core/src/IOWrapper/ROS/: ROSImageStreamThread.h
lsd_slam_core/src/Tracking/: DervLie.cpp  DervLie.h  JetOps.h  Relocalizer.cpp  SE3Tracker.cpp  SE3Tracker.h  SE3TrackerRollingShutter.cpp  SE3TrackerRollingShutter.h  SE3Tracker_BN3.cpp  Sim3Tracker.cpp  Spline.cpp  Spline.h  TrackingReference.cpp  TrackingReference.h  WarpResidual.cpp  WarpResidual.h  WarpResidual_BN3.cpp  WarpResidual_BN3.h
lsd_slam_core/src/util/: MyMats.h  Undistorter.cpp  Undistorter.h  globalFuncs.cpp  globalFuncs.h  settings.cpp  settings.h
lsd_slam_viewer/: CMakeLists.txt
lsd_slam_viewer/cfg/: LSDSLAMViewerParams.cfgc
lsd_slam_viewer/src/: main_stitchVideos.cpp  main_viewer.cpp
